# api/gen/go/authentication/service/v1/authentication_service.pb.validate.go
@@ -492,7 +492,7 @@ func (m *CurrentUserInfoResponse) validate(all bool) error {
 
 	// no validation rules for RealName
 
-	for idx, item := range m.GetMenusTree() {
+	for idx, item := range m.GetMenuTree() {
 		_, _ = idx, item
 
 		if all {
@@ -500,7 +500,7 @@ func (m *CurrentUserInfoResponse) validate(all bool) error {
 			case interface{ ValidateAll() error }:
 				if err := v.ValidateAll(); err != nil {
 					errors = append(errors, CurrentUserInfoResponseValidationError{
-						field:  fmt.Sprintf("MenusTree[%v]", idx),
+						field:  fmt.Sprintf("MenuTree[%v]", idx),
 						reason: "embedded message failed validation",
 						cause:  err,
 					})
@@ -508,7 +508,7 @@ func (m *CurrentUserInfoResponse) validate(all bool) error {
 			case interface{ Validate() error }:
 				if err := v.Validate(); err != nil {
 					errors = append(errors, CurrentUserInfoResponseValidationError{
-						field:  fmt.Sprintf("MenusTree[%v]", idx),
+						field:  fmt.Sprintf("MenuTree[%v]", idx),
 						reason: "embedded message failed validation",
 						cause:  err,
 					})
@@ -517,7 +517,7 @@ func (m *CurrentUserInfoResponse) validate(all bool) error {
 		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
 			if err := v.Validate(); err != nil {
 				return CurrentUserInfoResponseValidationError{
-					field:  fmt.Sprintf("MenusTree[%v]", idx),
+					field:  fmt.Sprintf("MenuTree[%v]", idx),
 					reason: "embedded message failed validation",
 					cause:  err,
 				}
